# mdx

./: .gitignore  .readthedocs.yaml  helper_functions.py  ingest.py  pyproject.toml  requirements.txt  requirements_dev.txt
docs/: conf.py  index.rst  requirements.txt
docs/api/: mdx.analysis.rst  mdx.io.rst  mdx.models.rst  mdx.rst  modules.rst
examples/: meta.yaml
mdx/: __init__.py  helper_functions.py  ingest.py
mdx/analysis/: __init__.py  dielectric.py
mdx/format/: meta.py
mdx/models/: __init__.py  core.py  meta.py
